--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 .DS_Store
+
+wallabee-ios/wallabee-ios.xcodeproj/project.xcworkspace/xcuserdata/klohman.xcuserdatad/UserInterfaceState.xcuserstate
